--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^7.3.4",
+    "mongoose": "^7.4.0",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.32.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=14.20 <15"
   }
 }
