--- a/cliente/package.json
+++ b/cliente/package.json
@@ -38,5 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://backend-gestor.onrender.com/"
+  "proxy": "https://gestordeproductosgaming-api.onrender.com/"
 }
